--- a/app/templates/_searchbar.html
+++ b/app/templates/_searchbar.html
@@ -1,9 +1,9 @@
-<h4 class="title is-4">Filter</h4>
+<h5 class="title is-5">Recherche par filtre</h5>
 <p class="has-text-info">
     {% if  searched %}
-        Number of entries with current filter:
+        Nombre total avec ce filtre :
     {% else %}
-        Total number of entries:
+        Nombre total :
     {% endif %}
     {{ data.total }}
 </p>
