--- a/app/templates/speakers.html
+++ b/app/templates/speakers.html
@@ -27,7 +27,7 @@
                 </div>
             </div>
             <footer class="card-footer">
-                <a href="#" class="card-footer-item">More...</a>
+                <a href="{{ url_for('index') }}" class="card-footer-item">Retour à l'accueil</a>
             </footer>
         </div>
     </div>
