--- a/app/templates/students/need-page-student.html
+++ b/app/templates/students/need-page-student.html
@@ -1,10 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends '_base.html' %}
 
-</body>
-</html>
+{% block content %}
+
+    {% include '_title.html' %}
+    <div class="container">
+        <p>{{ data.need.team.project.title }}</p>
+        <p>{{ data.need.team.project.description }}</p>
+        <br><br>
+
+        <p>Estimated tokens : </p>
+        <p>{{ data.need.estimated_tokens }}</p>
+        <br>
+
+        <p>Status : </p>
+        <p>{{ data.need.status }}</p>
+        <br>
+
+        <p>speaker_conclusion : </p>
+        <p>{{ data.need.speaker_conclusion }}</p>
+        <p>used_tokens : </p>
+        <p>{{ data.need.used_tokens }}</p>
+
+
+        <br>
+
+
+        <p>team_conclusion : </p>
+        <p>{{ data.need.team_conclusion }}</p>
+        <br>
+
+
+   </div>
+{% endblock %}
