--- a/app/templates/ideas.html
+++ b/app/templates/ideas.html
@@ -2,13 +2,17 @@
 
 {% block content %}
     {% include '_title.html' %}
-    <section class="section">
+    <section class="section" xmlns="http://www.w3.org/1999/html">
         <div class="container">
             {% include '_searchbar.html' %}
             <div class="control">
                 <div class="field is-grouped is-grouped-right">
                     <div class="control">
-                        <a class="button is-dark is-focused" href="{{ url_for('get_create_idea') }}">Ajouter une nouvelle idée</a>
+                        {% if session['uid'] %}
+                            <a class="button is-dark is-focused" href="{{ url_for('get_create_idea') }}">Ajouter une nouvelle idée</a>
+                        {% else %}
+                            <a class="button is-dark is-focused"  href="{{ url_for('login') }}">Connectez-vous pour ajouter une nouvelle idée</a>
+                        {% endif %}
                     </div>
                 </div>
             </div>
@@ -21,10 +25,28 @@
                                 <div class="content">
                                     <p>
                                         <a href="{{ url_for('get_ideas', id=idea.id) }}"><strong>{{ idea.title }}</strong></a>
-                                        <small>- Initiateur : <a  href="mailto:{{ idea.student.user.email }} ?subject=Workshop EPSI - Idée {{ idea.title }}" >{{ idea.student.user.full_name }}</a></small>
-                                        <br> {{ idea.description }}
+                                        <small >- Initiateur : <a  href="mailto:{{ idea.student.user.email }} ?subject=Workshop EPSI - Idée {{ idea.title }}" >{{ idea.student.user.full_name }}</a></small>
+                                        <br>
+                                        <br>
+                                        {{ idea.description }}
                                     </p>
                                 </div>
+                            </div>
+                            <div class="media-right" align="center">
+                                {% if idea.interested > 1 %}
+                                   <strong><p> Intéressés : {{ idea.interested }}</p></strong>
+                                {% else %}
+                                    <strong><p>Intéressé : {{ idea.interested }}</p></strong></p></strong>
+                                {% endif %}
+                                <br>
+                                {% if session['uid'] %}
+                                   <a href="{{ url_for('add_interest_idea', id=idea.id) }}">
+                                        <img src="/static/img/interest.png" alt="Je suis intéressé par cette idée !" width="32" height="32">
+                                   </a>
+                                {% else %}
+                                    <a class="button is-light is-focused"  href="{{ url_for('login') }}">Connectez-vous</a>
+                                {% endif %}
+
                             </div>
                         </article>
                     </div>
