--- a/app/templates/_navbar.html
+++ b/app/templates/_navbar.html
@@ -1,9 +1,9 @@
 <nav class="navbar is-dark">
     <div class="navbar-brand">
       <a class="navbar-item" href="#">
-        <img src="../static/img/weta.png" alt="WETA : Workshop Enhanced Token Administration" width="112" height="28">
+        <img src="/static/img/weta.png" alt="WETA : Workshop Enhanced Token Administration" width="112" height="28">
       </a>
-  
+
       <button class="button navbar-burger">
         <span></span>
         <span></span>
@@ -14,32 +14,20 @@
     <div class="navbar-menu">
         <div class="navbar-start">
             {% if session['logged_as'] %}
-
                 {% if session['logged_as']=='student' %}
-
                     <a href="{{ url_for('get_student_dashboard') }}" class="navbar-item">Dashboard</a>
-
                 {% elif session['logged_as']=='speaker' %}
-
-                    <a href="{{ url_for('get_speaker_dashboard', id=session['uid']) }}"
-                       class="navbar-item">Dashboard</a>
+                    <a href="{{ url_for('get_speaker_dashboard', id=session['uid']) }}" class="navbar-item">Dashboard</a>
                     <a href="{{ url_for('get_profile', id=session['uid']) }}" class="navbar-item">Profil</a>
-
                 {% elif session['logged_as']=='main_teacher' %}
-
                     <a href="{{ url_for('get_mainteacher_dashboard', id=session['uid']) }}" class="navbar-item">Dashboard</a>
                     <a href="{{ url_for('get_profile', id=session['uid']) }}" class="navbar-item">Profil</a>
-                    <a href="{{ url_for('get_speakers') }}" class="navbar-item">Intervenants</a>
-                    <a href="{{ url_for('get_projects') }}" class="navbar-item">Projets</a>
+                    <a href="{{ url_for('get_speakers') }}" class="navbar-item">Intervenants & Demandes</a>
                     <a href="{{ url_for('get_teams') }}" class="navbar-item">Equipes</a>
-                    <a href="{{ url_for('get_student_dashboard') }}" class="navbar-item">Demandes</a>
-
+                    <a href="{{ url_for('get_projects') }}" class="navbar-item">Projets</a>
                 {% endif %}
-
             {% endif %}
-
             <a href="{{ url_for('get_ideas') }}" class="navbar-item">Idées</a>
-
         </div>
         <div class="navbar-end">
             {% if session['uid'] %}
