--- a/app/templates/_navbar.html
+++ b/app/templates/_navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar is-dark">
+<nav class="navbar is-dark is-bold">
     <div class="navbar-brand">
       <a class="navbar-item" href="#">
         <img src="/static/img/weta.png" alt="WETA : Workshop Enhanced Token Administration" width="112" height="28">
