--- a/app/templates/_title.html
+++ b/app/templates/_title.html
@@ -1,4 +1,4 @@
-<section class="hero is-light" >
+<section class="hero is-info is-bold" >
     <div class="hero-body">
         <div class="container">
             <h1 class="title"> {{ title }} </h1>
