--- a/app/templates/students/project-stage.html
+++ b/app/templates/students/project-stage.html
@@ -59,5 +59,7 @@
                 {% endfor %}
             {% endif %}
         </div>
+    <br>
+    {% include '_pagination.html' %}
     </section>
 {% endblock %}
