--- a/app/templates/speakers/speaker-dashboard.html
+++ b/app/templates/speakers/speaker-dashboard.html
@@ -4,42 +4,49 @@
 
     {% include '_title.html' %}
     <section class="section">
-    <div class="container">
-        {% include '_searchbar.html' %}
-    </div>
+        <div class="container">
+            {% include '_searchbar.html' %}
+        </div>
     </section>
 
     <section class="section">
-    <div class="container">
+        <div class="container">
 
-        {% for need in data.items %}
-            <div class="box">
-                <article class="media">
-                    <div class="media-content">
-                        <div class="content">
-                            <p>
-                                <strong>{{ need.title }}</strong>
-                                <small>Equipe : {{ need.team.name }}</small>
-                                -
-                                <small>{{ need.estimated_tokens }} estimated tokens</small>
-                                -
-                                <small>{{ need.status }}</small>
-                                <br>
-                                {{ need.description }}
+            {% for need in data.items %}
+                <div class="box">
+                    <article class="media">
+                        <div class="media-left">
+                            {% if session['logged_as']=='main_teacher' %}
+                                <small>{{ need.speaker.user.first_name}}</small><br>
+                                <small>{{ need.speaker.user.last_name}}</small>
+                            {% endif %}
+                        </div>
+                        <div class="media-content">
+                            <div class="content">
+                                <p>
+                                    <strong>{{ need.title }}</strong>
+                                    <small>Equipe : {{ need.team.name }}</small>
+                                    -
+                                    <small>{{ need.estimated_tokens }} estimated tokens</small>
+                                    -
+                                    <small>{{ need.status }}</small>
+
+                                    <br>
+                                    {{ need.description }}
+                                </p>
+                            </div>
+                        </div>
+                        <div class="media-right">
+                            <p class="control">
+                                <a class="button" href="{{ url_for('get_need_page', id=need.id) }}">
+                                    <span>Ouvrir</span>
+                                </a>
                             </p>
                         </div>
-                    </div>
-                    <div class="media-right">
-                        <p class="control">
-                            <a class="button" href="{{ url_for('get_need_page', id=need.id) }}">
-                                <span>Ouvrir</span>
-                            </a>
-                        </p>
-                    </div>
-                </article>
-            </div>
-        {% endfor %}
-    {% include '_pagination.html' %}
-    </div>
+                    </article>
+                </div>
+            {% endfor %}
+            {% include '_pagination.html' %}
+        </div>
     </section>
 {% endblock %}
