--- a/app/templates/errors/404.html
+++ b/app/templates/errors/404.html
@@ -4,7 +4,8 @@
     {% include '_title.html' %}
     <div class="container">
 
-        <h1>This page doesn't exist (404).</h1>
+        <h1>Cette page n'existe pas (404).</h1>
+        <br>
         <p><a href="{{ url_for('index') }}">Back</a></p>
     </div>
 {% endblock %}
