--- a/app/templates/errors/non-implemented.html
+++ b/app/templates/errors/non-implemented.html
@@ -3,8 +3,8 @@
 {% block content %}
     {% include '_title.html' %}
     <div class="container">
-        <h1>Une erreur est apparue chez nous !</h1>
-        <p>L'administrateur a bien été notifié, merci de réitérer votre demande.</p>
+        <h1>Désolé ...</h1>
+        <p>Cette fonction n'a pas encore été implémentée ... Revenez très prochainement !</p>
         <p><a href="{{ url_for('index') }}">Back</a></p>
     </div>
 {% endblock %}
